Adding new idea of finding largest number using arraylist sort